# ucifs

./: CMakeLists.txt  LICENSE  README.md  dump-config.sh  fileHandles.c  fileHandles.h  logStuff.c  logStuff.h  uci2libelektra.c  uci2libelektra.h  ucifs.c  ucifs.h  utils.c  utils.h
